--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .home-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* justify-content: center; */
 }
 
 .hero-section {
@@ -25,34 +25,42 @@
   background: rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  text-align: left;
 }
 
 .hero-title {
-  font-size: 4rem;
+  font-size: 6rem;
+  letter-spacing: 3px;
   color: white;
-  font-weight: bold;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-stretch: 50%;
+  padding-left: 100px;
+  padding-top: 50px;
 }
 
 .hero-subtitle {
   font-size: 1.5rem;
   color: white;
   margin-top: 1rem;
+  padding-left: 100px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .start-planning-btn {
   margin-top: 2rem;
   padding: 1rem 2rem;
-  background-color: #1a73e8;
+  margin-left: 100px;
+  background-color: #00caee;
   color: white;
   border: none;
   border-radius: 25px;
   font-size: 1.2rem;
+  text-align: center;
   cursor: pointer;
+  width: 20pc;
+  height: 4pc;
 }
 
 .start-planning-btn:hover {
-  background-color: #0c5dbb;
+  background-color: #13bcda;
 }
