--- a/src/pages/SignIn/SignIn.css
+++ b/src/pages/SignIn/SignIn.css
@@ -1,5 +1,5 @@
 body {
-  /* background-image: url("/Images/Login_Bg.png");*/
+  background-image: url("/Images/Login_Bg.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
