--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -7,6 +7,19 @@ body {
   height: 100px;
 }
 
+.CNA {
+  position: fixed;
+  color: white;
+  font-size: 80px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-transform: uppercase;
+  margin-top: 110px;
+  margin-left: 100px;
+  padding: 0;
+  text-align: center;
+  line-height: 1.5;
+}
+
 .signup_col {
   background-color: rgba(255, 255, 255, 0.274);
   float: right;
@@ -64,4 +77,8 @@ input::placeholder {
   color: white;
   padding-top: 16px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.SignUp:hover {
+  color: #0b1f71;
 }
