--- a/src/components/AddTrip/AddTrip.css
+++ b/src/components/AddTrip/AddTrip.css
@@ -60,7 +60,7 @@ textarea::placeholder {
   padding-bottom: 15px;
   margin-top: 10px;
   font-size: 20px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
 }
 
