--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -1,62 +1,88 @@
-.Notes {
+.NotesContainer {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 1rem;
   background-color: rgba(255, 255, 255, 0.288);
   border: 4px solid white;
   border-radius: 40px;
+  margin-top: 20px;
 }
 
-.NewNote {
-  height: 40px;
-  width: 30pc;
-  border-radius: 60px;
+.InputContainer {
+  margin-bottom: 1.5rem;
+}
+
+.NewNoteInput {
+  height: 20px;
+  width: 75%;
+  border-radius: 5px;
   border: none;
+  padding: 10px;
 }
 
-.AddNoteBtn {
+.AddNewNoteButton {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   height: 40px;
-  width: 7pc;
-  padding: 0.5rem 1rem;
-  margin-left: 7px;
+  width: 20%;
+  padding: 10px 15px;
+  margin-left: 10px;
   background-color: #28a745;
   color: #fff;
   border: none;
-  border-radius: 60px;
+  border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
-.AddNoteBtn:hover {
+
+.AddNewNoteButton:hover {
   background-color: #168e32;
 }
 
-.NotesAdded {
+.NotesList {
+  margin-top: 1rem;
+}
+
+.SingleNote {
   margin-bottom: 1rem;
-  padding: 2rem;
+  padding: 1.5rem;
   border: 3px solid #ccc;
   border-radius: 8px;
   background-color: #f9f9f9;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.NotesAdded p {
-  color: black;
-  padding-bottom: 20px;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+.NoteTitle {
+  margin: 0;
 }
 
-.NAddedDelBtn {
+.NoteContent {
+  color: black;
+  padding-bottom: 10px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.DeleteNoteButton {
   float: right;
-  padding: 0.25rem 0.7rem;
+  padding: 5px 10px;
   background-color: #dc3545;
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s;
+  margin-top: -6px;
+  line-height: 1;
+  height: 22px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
-.NAddedDelBtn:hover {
-  background-color: #ff0019;
+.DeleteNoteButton:hover {
+  background-color: #c82333;
 }
 
-.pNote {
-  text-wrap: wrap;
-  width: 90%;
+.NoNotesMessage {
+  text-align: center;
+  color: #f9f8f8;
 }
