--- a/src/components/ManageUsers/ManageUsers.css
+++ b/src/components/ManageUsers/ManageUsers.css
@@ -1,42 +1,77 @@
-.MangageUsers {
-  background-color: rgba(255, 255, 255, 0.288);
-  border: 5px solid #17224d;
-  border-radius: 40px;
-  padding: 20px 0px 20px 50px;
-  /* justify-content: center; */
-  margin-top: 30px;
-  width: 40pc;
-  margin: 0 auto;
-  margin-top: 20px;
+.ManageUsers {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 600px;
+  font-family: "Arial", sans-serif;
 }
 
-.MangageUsers h3 {
-  color: white;
-  padding-bottom: 10px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-ul {
-  color: white;
-}
-
-li {
-  padding-bottom: 10px;
-}
-
-.BtnMUsers {
-  background-color: #17224d;
-  color: white;
-  font-size: 10px;
+.ManageUsers h3 {
+  font-size: 18px;
   font-weight: bold;
-  height: 20px;
-  width: 120px;
-  border-radius: 40px;
-  border: none;
-  margin-left: 10px;
+  color: #333;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #e0e0e0;
+  padding-bottom: 10px;
 }
 
-.BtnMUsers:hover {
-  background-color: #0b1f71;
-  border-radius: 40px;
+.invite-section {
+  padding: 15px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.invite-section:last-child {
+  border-bottom: none;
+}
+
+.invites-list {
+  list-style: none;
+  padding: 0;
+  margin: 10px 0;
+}
+
+.invites-list li {
+  margin: 10px 0;
+  font-size: 15px;
+  padding: 10px 0;
+}
+
+.date {
+  margin-top: 10px;
+  font-size: 0.8em; /* Small font for the date */
+  color: #666;
+}
+
+.email {
+  font-size: 1.2em;
+  font-weight: 300;
+  color: #333;
+}
+
+.avatar-circle {
+  background-color: #8a2be2;
+  color: white;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.participant-card {
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.notFound-message {
+  padding: 20px;
+  text-align: center;
 }
