--- a/src/components/AddActitivity/AddActivity.css
+++ b/src/components/AddActitivity/AddActivity.css
@@ -1,95 +1,76 @@
-.activity-form h1,
-h5 {
-  color: white;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.activity-form {
+  background-color: rgba(255, 255, 255, 0.274);
+  border-radius: 10px;
+  padding: 30px 40px;
+  width: 100%;
+  width: 600px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  color: black;
+  margin: 0 auto;
+}
+
+.activity-title {
+  font-size: 35px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #fff;
   text-align: center;
-  padding-bottom: 20px;
+  margin: 40px 0;
 }
 
 .ActivityInfo {
-  padding-top: 15px;
-  border: 3px solid white;
-  border-radius: 30px;
-  background-color: rgba(255, 255, 255, 0.514);
-  width: 60%;
-  height: 24pc;
-  margin-left: 15pc;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
-.ActivityName {
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+.ActivityName label,
+.ActivityDes label,
+.ActivityDate label,
+.ActivityLocatoin label {
+  color: #17224d;
+  margin-bottom: 20px;
+  font-size: 16px;
 }
 
-.ActivityName input {
-  width: 30pc;
-  height: 2pc;
-  margin-bottom: 8px;
-  border-radius: 30px;
-  border: none;
-}
-
-.ActivityDes {
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.ActivityDes textarea {
-  border-radius: 10px;
-  border: none;
-}
-
-.ActivityDate {
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.ActivityDate input {
-  width: 30pc;
-  height: 2pc;
-  margin-bottom: 8px;
-  border-radius: 20px;
-  border: none;
-}
-
-.ActivityLocatoin {
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  padding-bottom: 10px;
-}
-
+.ActivityName input,
+.ActivityDes textarea,
+.ActivityDate input,
 .ActivityLocatoin input {
-  width: 30pc;
-  height: 2pc;
-  border-radius: 20px;
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
   border: none;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #333;
+  font-size: 16px;
+  outline: none;
+}
+
+textarea {
+  height: 100px;
+  resize: none;
 }
 
 .ActivityBtn {
-  margin-left: 140px;
-  margin-top: 10px;
   background-color: #17224d;
   color: white;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: bold;
-  width: 30pc;
-  height: 2pc;
+  padding: 15px;
   border-radius: 40px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 100%;
 }
 
 .ActivityBtn:hover {
   background-color: #0b1f71;
-  border-radius: 40px;
 }
