--- a/src/components/AddTrip/AddTrip.css
+++ b/src/components/AddTrip/AddTrip.css
@@ -1,72 +1,62 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
-
-/* body {
-} */
 
 .trip-form {
+  background-color: rgba(255, 255, 255, 0.274);
+  border-radius: 10px;
+  padding: 20px 30px;
+  width: 100%;
+  width: 600px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  color: white;
   text-align: center;
-  padding-top: 56px;
+  margin: 0 auto;
 }
 
-.trip-form h2 {
-  /* text-align: center; */
-  color: white;
-  font-size: 50px;
-  font-family: Arial, Helvetica, sans-serif;
+.title-trip {
+  font-size: 35px;
   font-weight: bold;
+  margin-bottom: 20px;
+  color: #fff;
+  text-align: center;
+  margin: 40px 0;
 }
 
 .inputs {
-  /* text-align: center; */
-  background-color: rgba(255, 255, 255, 0.274);
-  height: 43pc;
-  width: 40pc;
-  margin-left: 20pc;
-  margin-top: 10px;
-  padding-top: 10px;
-  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
 }
 
-.inputs label {
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.input-wrapper label {
   color: #17224d;
-  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 5px;
+  font-size: 16px;
 }
 
-.input-AddTrip {
-  border-radius: 20px;
+.input-AddTrip,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
   border: none;
-  margin-top: 10px;
-  width: 22pc;
-  height: 2pc;
-  width: 30pc;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #333;
+  font-size: 16px;
+  outline: none;
 }
 
 textarea {
-  width: 30pc;
-  height: 5pc;
-  border-radius: 10px;
-  margin-top: 10px;
-}
-
-textarea::placeholder {
-  padding: 6px;
-}
-
-.input-wrapper-3 {
-  color: #17224d;
-  padding-bottom: 15px;
-  margin-top: 10px;
-  font-size: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
-}
-
-.input-wrapper-3 label {
-  float: left;
-  padding-left: 85px;
+  height: 100px;
+  resize: none;
 }
 
 .AddTripSubmitBtn {
@@ -74,12 +64,14 @@ textarea::placeholder {
   color: white;
   font-size: 18px;
   font-weight: bold;
-  height: 50px;
-  width: 30pc;
+  padding: 15px;
   border-radius: 40px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 100%;
 }
 
 .AddTripSubmitBtn:hover {
   background-color: #0b1f71;
-  border-radius: 40px;
 }
