--- a/src/components/ListActivities/ListActivities.css
+++ b/src/components/ListActivities/ListActivities.css
@@ -1,10 +1,7 @@
 .activitiy-container {
-  border: 1px solid black;
-
   margin: 10px;
   width: 50%;
-
-  background-color: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 25px;
   overflow: hidden;
   margin: 0 auto;
