--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -7,8 +7,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 2rem 2rem;
   font-family: sans-serif;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 a {
