--- a/src/components/DetailsTrip/DetailsTrip.css
+++ b/src/components/DetailsTrip/DetailsTrip.css
@@ -1,9 +1,9 @@
 .Details h2 {
-  color: white;
+  color: #1f2a56;
   text-transform: uppercase;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 40px;
-  text-align: center;
+
   padding: 20px;
   letter-spacing: 0.1rem;
 }
