--- a/src/components/ListActivities/ListActivities.css
+++ b/src/components/ListActivities/ListActivities.css
@@ -1,5 +1,4 @@
 .activitiy-container {
-
   margin: 10px;
   width: 50%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -99,9 +98,9 @@
 }
 
 .activity-header h1 {
-  color: white;
+  color: #1f2a56;
   text-transform: uppercase;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 40px;
   text-align: center;
   padding: 20px;
@@ -110,7 +109,7 @@
 
 .activity-header p {
   font-size: 16px;
-  color: #e8f0f8;
+  color: grey;
   margin-bottom: 20px;
   padding-top: 8px;
   text-align: center;
