--- a/src/components/ManageUsers/ManageUsers.css
+++ b/src/components/ManageUsers/ManageUsers.css
@@ -45,7 +45,7 @@
 }
 
 .email {
-  font-size: 1.2em;
+  font-size: 1em;
   font-weight: 300;
   color: #333;
 }
@@ -69,9 +69,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 10px;
 }
 
 .notFound-message {
   padding: 20px;
   text-align: center;
+}
+
+.participants-container {
+  display: flex;
+  justify-content: center;
 }
