--- a/src/components/AddTrip/AddTrip.css
+++ b/src/components/AddTrip/AddTrip.css
@@ -1,3 +1,11 @@
+body.add-trip-page {
+  background-image: url('/Images/11.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  min-height: 100vh;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -5,11 +13,11 @@
 }
 
 .trip-form {
-  background-color: rgba(255, 255, 255, 0.274);
+  background-color: #e6e3e3b3;
   border-radius: 10px;
   padding: 20px 30px;
   width: 100%;
-  width: 600px;
+  max-width: 600px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   color: white;
   text-align: center;
