--- a/src/components/ListTrips/ListTrips.css
+++ b/src/components/ListTrips/ListTrips.css
@@ -1,7 +1,7 @@
 .trips-container {
   min-height: 100vh;
-  background-color: white;
-  padding: 20px;
+  background-color: #e6e3e3;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,7 +17,7 @@
 .trips-header h2 {
   font-size: 36px;
   font-weight: bold;
-  color: black;
+  color: #17224d;
 }
 
 .add-trip-button {
@@ -78,7 +78,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.3);
   transition: opacity 0.3s ease;
   z-index: 1;
 }
