--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,17 +1,20 @@
-body {
-  /*background-image: url("/Images/Login_Bg.png");*/
+body.register-page {
+  background-image: url('/Images/login.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: bottom;
-  height: 100px;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
+/* Apply design similar to Sign In but keep register-specific sizes */
 .CNA {
   position: fixed;
   color: white;
   font-size: 80px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-transform: uppercase;
   margin-top: 110px;
   margin-left: 100px;
@@ -23,9 +26,9 @@ body {
 .signup_col {
   background-color: rgba(255, 255, 255, 0.274);
   float: right;
-  height: 38pc;
-  width: 26pc;
-  /* margin-top: 29px; */
+  height: 36pc; /* Larger height for register */
+  width: 26pc; /* Larger width for register */
+  margin-top: 29px;
   margin-right: 7pc;
   border-radius: 30px;
 }
@@ -40,7 +43,7 @@ body {
   color: #17224d;
   padding-bottom: 30px;
   font-size: 20px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
 }
 
@@ -48,7 +51,7 @@ body {
   border-radius: 20px;
   border: none;
   margin-top: 20px;
-  width: 22pc;
+  width: 22pc; /* Larger input fields */
   height: 2pc;
 }
 
@@ -57,7 +60,7 @@ input::placeholder {
 }
 
 .Register {
-  margin-left: 115px;
+  margin-left: 115px; /* Align register button with the form */
   background-color: #17224d;
   color: white;
   font-size: 18px;
