--- a/src/pages/SignIn/SignIn.css
+++ b/src/pages/SignIn/SignIn.css
@@ -1,17 +1,19 @@
-body {
-  background-image: url("/Images/Login_Bg.png");
+body.login-page {
+  background-image: url('/Images/login.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: bottom;
-  height: 100px;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .LTYA {
   position: fixed;
   color: white;
   font-size: 80px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-transform: uppercase;
   margin-top: 110px;
   margin-left: 60px;
@@ -23,9 +25,9 @@ body {
 .signin_col {
   background-color: rgba(255, 255, 255, 0.274);
   float: right;
-  height: 32pc;
+  height: 30pc;
   width: 25pc;
-  margin-top: 29px;
+  margin-top: 60px;
   margin-right: 7pc;
   border-radius: 30px;
 }
@@ -38,9 +40,9 @@ body {
 
 .input-wrapper {
   color: #17224d;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   font-size: 20px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
 }
 
