--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -26,7 +26,7 @@
   width: 20%;
   padding: 10px 15px;
   margin-left: 10px;
-  background-color: #28a745;
+  background-color: #17224d;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -35,7 +35,7 @@
 }
 
 .AddNewNoteButton:hover {
-  background-color: #168e32;
+  background-color: #6a67ce;
 }
 
 .NotesList {
